# Interactive-Media-Evolution-and-Recommendation

./: .gitattributes  .gitignore  README.md  requirements.txt  timing_log.txt  timing_log_users.txt
cpp/: CMakeLists.txt  CMakeLists.txt (modified)  Makefile
cpp/include/: aligned_alocator.h  random_generators.h  random_utils.h  recommendator.h  relation_properties.h  relations.h  unordered_linked_list.h
cpp/src/: compile.txt  main.cpp  random_generators.cpp  recommendator.cpp
cpp/test/: CMakeLists.txt  compile.txt  test_random_generators.cpp  test_recommendator.cpp
cpp/utils/: fast_copy.cpp  random_utils.cpp  timer.cpp
data/: channels.csv  comments.csv  content.csv  users.csv
data/behavior_generated/: country_data_cleaned.csv  sleep_hours_by_age_country.csv  work_behavior.csv
data/behavior_imported/: country_data.txt  sleep_by_country.json  sleep_duration_generations.json
data/tables/: CHANNEL.csv  CHANNEL_CHExtLink.csv  COMMENT.csv  COMMENTREPLY.csv  CONTENT.csv  CONTENT_CONTTag.csv  LIVE.csv  LIVECOMMENT.csv  NOTIFICATION.csv  PLAYLIST.csv  PLAYLISTCONTENT.csv  PLAYLIST_PLAYTag.csv  POLL.csv  POLLCOMMENT.csv  SHORT.csv  UADMINCH.csv  UCOMINT.csv  UCONTINT.csv  UINTERESTCH.csv  UPLAYINT.csv  USER.csv  USERINTERACTION.csv  USERNOTIFIED.csv  UWATCHINGCONT.csv  VIDEO.csv
data/words/: adjectives.txt  nouns.txt
faster_src/: CMakeLists.txt  Doxyfile  random_generators.h  relations.h
src/: __init__.py  generate_country_behavior.ipynb  generate_sleep_behavior.ipynb  generate_words.ipynb  generate_work_behavior.ipynb  initialize.py  iterate.py  iterate_planning.ipynb  random_channel_name.py  recommendate.py  user_generation.py
src/creators/: channel_creator.py  content_creator.py  user_creator.py
src/generators/: channel_creator.py  channel_generator.py  content_generator.py  user_creator.py  (+4 more)
(+29 files in other folders)
